# confs

./: .bashrc  .gitconfig  .gitk  .latexmkrc  .profile  .tmux.conf  init.vim  install_pplatex.sh  install_rc.sh  setup_proj
cpp/: CMakeLists.txt
git/: .gitignore  gitk
gtk/: gtk.css
gtk-3.0/: gtk.css
konsole/: DarkPastels.colorscheme  Profile 1.profile  WhiteOnBlack.colorscheme
latex/: article_template.tex  pres_template.tex
vim/: .lvimrc  .vimrc
vim/after/ftplugin/: c.vim  python.vim  tex.vim
vim/spell/: ru.utf-8.add  ru.utf-8.add.spl
zathura/: zathurarc
